@@ -1,3 +1,14 @@
+2020-11-12  Devin Rousso  <drousso@apple.com>
+
+        Web Inspector: REGRESSION(?): Sources: WebSocket status not shown when organized By Path
+        https://bugs.webkit.org/show_bug.cgi?id=218679
+
+        Reviewed by Brian Burg.
+
+        * UserInterface/Views/SourcesNavigationSidebarPanel.js:
+        (WI.SourcesNavigationSidebarPanel.prototype._addResource):
+        Make sure to use `WI.WebSocketResourceTreeElement` for `WI.WebSocketResource`.
+
 2020-11-11  John Wilander  <wilander@apple.com>
 
         PCM: Change from ad-click-attribution to private-click-measurement (in all forms, including .well-known URL)
